Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
6.2
-
None
-
macOS 12.2
-
-
8247c0dac3 (qt/qtbase/dev) 8247c0dac3 (qt/tqtc-qtbase/dev) c4239ebb3b (qt/qtbase/6.2) c4239ebb3b (qt/tqtc-qtbase/6.2) f080f91fa0 (qt/qtbase/6.3) f080f91fa0 (qt/tqtc-qtbase/6.3)
Description
I get unexpected warnings on the console when running my Qt application on macOS:
QPainter::begin: Paint device returned engine == 0, type: 2 QPainter::translate: Painter not active QPainter::rotate: Painter not active
The warnings are printed as soon as the application creates a QToolBar with vertical orientation. A minimal test program is attached to demonstrate the issue.
I tracked the problem down to the following line in the implementation of QMacStyle, right here:]
QPixmap pixmap(QLatin1String(":/qt-project.org/styles/macstyle/images/toolbar-ext.png"));
The referenced image file "toolbar-ext.png" cannot be found. Apparently, the image file has been renamed some time ago, but the source code was never updated.
https://github.com/qt/qtbase/commit/01dadd2da89dfa4f0853197ea33581552b2ce500
Attachments
For Gerrit Dashboard: QTBUG-100317 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
393372,2 | QMacStyle::standardIcon - use the real file name | dev | qt/qtbase | Status: MERGED | +2 | 0 |
393458,2 | QMacStyle::standardIcon - use the real file name | 6.3 | qt/qtbase | Status: MERGED | +2 | 0 |
393459,2 | QMacStyle::standardIcon - use the real file name | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |