QMacStyle::standardIcon - use the real file name

When converting to cmake, aliases from the (now deleted) qstyle.qrc were omitted and
now we have to use the original names.

Fixes: QTBUG-100317
Change-Id: Ieb83e95c62f10c0e2193602e4c12c5fc1667e15a
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit 8247c0dac3a54c838385c5d10eaabc1a084993ea)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>